add prism to masterpage; works but is ugly

--- a/Content/A_Introduction Topics/Basic Steps.htm
+++ b/Content/A_Introduction Topics/Basic Steps.htm
@@ -6,5 +6,6 @@
     <body>
         <h1>Basic Steps</h1>
         <p>Here is some general text for a topic. Replace this with your own content.</p>
+        <pre><code class="language-css">p { color: red }</code></pre>
     </body>
 </html>
