add python code snippet from django docs

--- a/Content/A_Introduction Topics/Basic Steps.htm
+++ b/Content/A_Introduction Topics/Basic Steps.htm
@@ -7,5 +7,10 @@
         <h1>Basic Steps</h1>
         <p>Here is some general text for a topic. Replace this with your own content.</p>
         <pre><code class="language-css">p { color: red }</code></pre>
+        <pre><code class="language-python">from django.db import models
+
+class Person(models.Model):
+    # Add manager with another name
+    people = models.Manager()</code></pre>
     </body>
 </html>
